# hw_simple_nnet

./: CMakeLists.txt  README.md  dataset.h  main.cpp
n_network/: CMakeLists.txt
n_network/include/n_network/: Activations.hpp  Layer.hpp  Layers.hpp  Loss.hpp  Network.hpp
